Resolved deprecated Java calls