@@ -293,8 +293,8 @@ public class GeneralUtils {
      *         browser and loading the provided URL; <code>false</code> otherwise
      */
     public static boolean launchBrowser(String url) {
-        String[] browsers = { "google-chrome", "firefox", "opera", "konqueror", "epiphany", "seamonkey", "galeon",
-                "kazehakase", "mozilla" };
+        String[] browsers = { "firefox", "google-chrome", "chrome", "chromium", "opera", "konqueror", "epiphany",
+                "seamonkey", "galeon", "kazehakase", "mozilla" };
         try { // attempt to use Desktop library from JDK 1.6+ (even if on 1.5)
             Class<?> d = Class.forName("java.awt.Desktop");
             d.getDeclaredMethod("browse", new Class[] { java.net.URI.class })
@@ -308,18 +308,21 @@ public class GeneralUtils {
                     Class.forName("com.apple.eio.FileManager")
                             .getDeclaredMethod("openURL", new Class[] { String.class })
                             .invoke(null, new Object[] { url });
-                } else if (osName.startsWith("Windows"))
-                    Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
-                else { // assume Unix or Linux
+                } else if (osName.startsWith("Windows")) {
+                    Runtime.getRuntime().exec(new String[] { "rundll32", "url.dll,FileProtocolHandler", url });
+                } else { // assume Unix or Linux
                     boolean found = false;
-                    for (String browser : browsers)
+                    for (String browser : browsers) {
                         if (!found) {
                             found = Runtime.getRuntime().exec(new String[] { "which", browser }).waitFor() == 0;
-                            if (found)
+                            if (found) {
                                 Runtime.getRuntime().exec(new String[] { browser, url });
+                            }
                         }
-                    if (!found)
+                    }
+                    if (!found) {
                         throw new Exception(Arrays.toString(browsers));
+                    }
                 }
             } catch (Exception e) {
                 return false;
